--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -105,5 +105,5 @@ knife4j:
           - com.wang.bi.controller
 yuapi:
   client:
-    access-key: tm8grs4a9d3trgacacu8h49ak7kqa89o
-    secret-key: xfzuzwce2hrhlr46w2q4wv61fzbt2mv7
+    access-key: #todo
+    secret-key: #todo
